# llmops

./: .gitignore  datetime_mcp.py  lab_cloud.ipynb  plot_mcp.py  pyproject.toml  weather_mcp.py
homework/: .env.example  Dockerfile  README.md  chat.py  docker-compose.yml  mcp_manager.py  openweather_mcp.py
homework/screenshots/: Screenshot 2026-06-29 at 13..textClipping
